# qgear-ai-growth-os

./: .env.example  .gitignore  AGENTS.md  README.md
apps/api/: pyproject.toml
apps/api/app/: __init__.py  main.py  serializers.py
apps/api/app/core/: config.py  ticker_map.py
apps/api/app/db/: analytics.py  sqlite.py
apps/api/app/routers/: __init__.py  ai.py  alerts.py  data.py  earnings.py  energy.py  financials.py  journal.py  macro.py  pipeline.py  portfolio.py  prices.py  providers.py  reports.py  settings.py  theses.py  today.py  universe.py  valuation.py
apps/api/app/schemas/: requests.py
docs/: API_EXAMPLES.md  QGEAR_CORE_BRAIN_V2_1_SPEC.md  QGEAR_Final_Report.md  QGEAR_LIVE_DATA_AND_PROVIDER_SPEC.md  QGEAR_RESEARCH_SOURCE_LIBRARY.md  QGEAR_UI_UX_V2_1_SPEC.md  QGEAR_V2_1_PROFESSIONAL_LIVE_RESEARCH_SPEC.md  QGEAR_V2_1_QA_AND_RELEASE_CHECKLIST.md  QGEAR_VISION_AND_PRODUCT_SPEC.md  architecture.md  ci.md  data-sources.md  decision-policy.md  final-system-report.md  information_architecture.md  iteration_log.md  legal-disclaimer.md  local-development.md  project_status.md  roadmap.md  scoring-model.md  strategy.md  user-flow.md  user_journey_v2.md  ux_audit.md
prompts/: CODEX_V2_1_PROFESSIONAL_LIVE_RESEARCH_PROMPT.md  decision_explainer.md  earnings_analyzer.md  earnings_summarizer.md  evidence_extractor.md  risk_extractor.md  scoring_explainer.md  thesis_updater.md
scripts/: dev_api.sh  dev_web.sh  run_tests.py  seed_local_data.py
tests/: test_ai_service.py  test_api_smoke.py  test_decision_engine.py  test_earnings_engine.py  test_providers.py  (+2 more)
(+46 files in other folders)
