[project]
name = "qgear-api"
version = "0.1.0"
description = "FastAPI backend for Q-GEAR AI Growth OS."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "python-dotenv>=1.0.1",
  "duckdb>=1.0.0",
  "apscheduler>=3.10.4"
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
